# cryptkeeper

./: .gitignore  README.md  pyproject.toml
src/autoeye/: README.md  cli.py  crypt.py  exceptions.py
src/cryptkeeper/: cli.py  credential.py  crypt.py
tests/: test_encrypt.py  test_key.py
